# gazebo_gt_map_creator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  QUICKSTART.md  QUICKSTART_LABELS.md  README.md  RVIZ_VISUALIZATION.md  SEMANTIC_LABELS.md  package.xml
hooks/: gz_sim_system_plugin_path.dsv.in
include/gazebo_gt_map_creator/: GazeboGtMapCreator.hpp
launch/: README.md
rviz/: view_pointcloud.rviz
scripts/: publish_pcd_to_rviz.py  save_map.py  test_semantic_labels.sh
src/: GazeboGtMapCreator.cpp
srv/: MapRequest.srv
worlds/: example_world.sdf
